fix: edge browser fixes (overflow) and avoid polyfills

--- a/src/scss/snake.module.scss
+++ b/src/scss/snake.module.scss
@@ -164,7 +164,7 @@ svg.tail-end {
   @extend %snake-link;
   @include transform(scale(0.31), 0 0);
   top: 2rem;
-  left: -1.2rem;
+  left: 0.2rem;
   &:hover:not(.mobile) {
     @include transform(scale(0.31) translateY(-10px), 0 0);
   }
@@ -177,7 +177,7 @@ svg.body-part-4 {
   &:not(.shadow) { z-index: 4; }
   @extend %snake-link;
   @include transform(scale(0.2) translateY(0), 0 0);
-  left: -1rem;
+  left: 0.2rem;
   top: 16rem;
   &:hover:not(.mobile) {
     @include transform(scale(0.2) translateY(-10px), 0 0);
@@ -189,7 +189,7 @@ svg.body-part-4 {
 svg.body-part-3 {
   @extend %snake-link;
   @include transform(scale(0.25), 0 0);
-  left: 7rem;
+  left: 8rem;
   top: 15rem;
   &.animated {
     @include animation('body-part-3-wave 2s ease 0.3s infinite')
@@ -203,7 +203,7 @@ svg.body-part-2 {
   @extend %snake-link;
   @include transform(scale(0.3), 0 0);
   top: 7rem;
-  left: 9.5rem;
+  left: 10.5rem;
   &.animated {
     @include animation('body-part-2-wave 2s ease 0.45s infinite')
   }
@@ -216,7 +216,7 @@ svg.body-part-1 {
   @extend %snake-link;
   @include transform(scale(0.28), 0 0);
   top: 1.5rem;
-  left: 10.5rem;
+  left: 11.5rem;
   &.animated {
     @include animation('body-part-1-wave 2s ease 0.6s infinite')
   }  
@@ -229,7 +229,7 @@ svg.body-part-0 {
   @extend %snake-link;
   @include transform(scale(0.22), 0 0);
   left: 21rem;
-  top: 11.5rem;
+  top: 12.5rem;
   &.animated {
     @include animation('body-part-0-wave 2s ease 0.75s infinite')
   }
@@ -241,7 +241,7 @@ svg.body-part-0 {
 svg.neck {
   @extend %snake-link;
   @include transform(scale(0.32), 0 0);
-  left: 28rem;
+  left: 29rem;
   top: 7rem;
   &.animated {
     @include animation('neck-wave 2s ease 1s infinite')
@@ -254,7 +254,7 @@ svg.neck {
 svg.head {
   @extend %snake-link;
   @include transform(scale(0.35), 0 0);
-  left: 31.5rem;
+  left: 32.5rem;
   top: 5.5rem;
   &.animated {
     @include animation('head-wave 2s ease 1.15s infinite');
@@ -308,6 +308,7 @@ svg.head {
   margin: auto;
   height: 404px;
   width: 848px;
+  overflow: hidden;
 }
 
 .decoration {
